...
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/cancelBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@mipmap/ic_cancel" />


            <ImageButton
                android:id="@+id/undoBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:background="@android:drawable/ic_menu_revert"/>
            <ImageButton
                android:id="@+id/addBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:background="@mipmap/ic_add" />

            />
...
